# ascend-npu-harness

./: .gitignore  AGENTS.md  CLAUDE.md  CLAUDE_NPU_HARNESS_TASK.md  CMakeLists.txt  CMakePresets.json  CONTEXT.md  OPERATOR_REGISTRY.yaml  PROJECT.md  README.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  skills-test-report.html
.claude/commands/: npu-discuss-op.md  npu-doctor.md  npu-execute-op.md  npu-map-codebase.md  (+7 more)
.npu-harness/: config.yaml
cmake/: Ascend.cmake  CompilerOptions.cmake  GTest.cmake  OperatorTarget.cmake
docs/: architecture.md  build.md  direct_launch.md  testing.md  troubleshooting.md
ops/: CMakeLists.txt
ops/activation_gelu_silu/: CMakeLists.txt
ops/activation_gelu_silu/bench/: bench_activation_gelu_silu.cpp
ops/activation_gelu_silu/golden/: activation_gelu_silu_golden.cpp  activation_gelu_silu_golden.hpp
ops/activation_gelu_silu/host/: activation_gelu_silu_tiling.cpp  activation_gelu_silu_tiling.h  activation_gelu_silu_tiling.hpp
ops/activation_gelu_silu/kernel/: activation_gelu_silu_kernel.cpp
ops/activation_gelu_silu/runner/: activation_gelu_silu_runner.cpp  activation_gelu_silu_runner.hpp
ops/axpy_scalar_affine/: CMakeLists.txt
ops/axpy_scalar_affine/bench/: bench_axpy_scalar_affine.cpp
ops/axpy_scalar_affine/golden/: axpy_scalar_affine_golden.cpp  axpy_scalar_affine_golden.hpp
ops/axpy_scalar_affine/host/: axpy_scalar_affine_tiling.cpp  axpy_scalar_affine_tiling.h  axpy_scalar_affine_tiling.hpp
ops/axpy_scalar_affine/kernel/: axpy_scalar_affine_kernel.cpp
ops/axpy_scalar_affine/runner/: axpy_scalar_affine_runner.cpp  axpy_scalar_affine_runner.hpp
ops/broadcast_binary/: CMakeLists.txt
ops/broadcast_binary/bench/: bench_broadcast_binary.cpp
ops/broadcast_binary/golden/: broadcast_binary_golden.cpp  broadcast_binary_golden.hpp
ops/broadcast_binary/host/: broadcast_binary_tiling.cpp  broadcast_binary_tiling.h  broadcast_binary_tiling.hpp
ops/broadcast_binary/kernel/: broadcast_binary_kernel.cpp
ops/broadcast_binary/runner/: broadcast_binary_runner.cpp  broadcast_binary_runner.hpp
ops/elementwise_add/: CMakeLists.txt
ops/elementwise_add/bench/: bench_elementwise_add.cpp
ops/elementwise_add/golden/: elementwise_add_golden.cpp  elementwise_add_golden.hpp
ops/elementwise_add/host/: elementwise_add_tiling.cpp  elementwise_add_tiling.h  elementwise_add_tiling.hpp
ops/elementwise_add/kernel/: elementwise_add_kernel.cpp
ops/elementwise_add/runner/: elementwise_add_runner.cpp  elementwise_add_runner.hpp
ops/flash_attention_fwd_fused/: CMakeLists.txt
ops/flash_attention_fwd_fused/bench/: bench_flash_attention_fwd_fused.cpp
ops/flash_attention_fwd_fused/golden/: flash_attention_fwd_fused_golden.cpp  flash_attention_fwd_fused_golden.hpp
ops/flash_attention_fwd_fused/host/: flash_attention_fwd_fused_tiling.cpp  flash_attention_fwd_fused_tiling.h  flash_attention_fwd_fused_tiling.hpp
ops/flash_attention_fwd_fused/kernel/: flash_attention_fwd_fused_kernel.cpp
ops/flash_attention_fwd_fused/runner/: flash_attention_fwd_fused_runner.cpp  flash_attention_fwd_fused_runner.hpp
ops/layer_norm/: CMakeLists.txt
ops/layer_norm/bench/: bench_layer_norm.cpp
ops/layer_norm/golden/: layer_norm_golden.cpp  layer_norm_golden.hpp
ops/layer_norm/host/: layer_norm_tiling.cpp  layer_norm_tiling.h  layer_norm_tiling.hpp
ops/layer_norm/kernel/: layer_norm_kernel.cpp
ops/layer_norm/runner/: layer_norm_runner.cpp  layer_norm_runner.hpp
ops/matmul_bias/: CMakeLists.txt
ops/matmul_bias/bench/: bench_matmul_bias.cpp
ops/matmul_bias/golden/: matmul_bias_golden.cpp  matmul_bias_golden.hpp
ops/matmul_bias/host/: matmul_bias_tiling.cpp  matmul_bias_tiling.h  matmul_bias_tiling.hpp
ops/matmul_bias/kernel/: matmul_bias_kernel.cpp
ops/matmul_bias/runner/: matmul_bias_runner.cpp  matmul_bias_runner.hpp
ops/reduce_sum_lastdim/: CMakeLists.txt
ops/reduce_sum_lastdim/bench/: bench_reduce_sum_lastdim.cpp
ops/reduce_sum_lastdim/golden/: reduce_sum_lastdim_golden.cpp  reduce_sum_lastdim_golden.hpp
ops/reduce_sum_lastdim/host/: reduce_sum_lastdim_tiling.cpp  reduce_sum_lastdim_tiling.h  reduce_sum_lastdim_tiling.hpp
ops/reduce_sum_lastdim/kernel/: reduce_sum_lastdim_kernel.cpp
ops/reduce_sum_lastdim/runner/: reduce_sum_lastdim_runner.cpp  reduce_sum_lastdim_runner.hpp
ops/rms_norm_rope_fused/: CMakeLists.txt
ops/rms_norm_rope_fused/bench/: bench_rms_norm_rope_fused.cpp
ops/rms_norm_rope_fused/golden/: rms_norm_rope_fused_golden.cpp  rms_norm_rope_fused_golden.hpp
ops/rms_norm_rope_fused/host/: rms_norm_rope_fused_tiling.cpp  rms_norm_rope_fused_tiling.h  rms_norm_rope_fused_tiling.hpp
ops/rms_norm_rope_fused/kernel/: rms_norm_rope_fused_kernel.cpp
ops/rms_norm_rope_fused/runner/: rms_norm_rope_fused_runner.cpp  rms_norm_rope_fused_runner.hpp
ops/transpose_2d_4d/: CMakeLists.txt
ops/transpose_2d_4d/bench/: bench_transpose_2d_4d.cpp
ops/transpose_2d_4d/golden/: transpose_2d_4d_golden.cpp  transpose_2d_4d_golden.hpp
ops/transpose_2d_4d/host/: transpose_2d_4d_tiling.cpp  transpose_2d_4d_tiling.h  transpose_2d_4d_tiling.hpp
ops/transpose_2d_4d/kernel/: transpose_2d_4d_kernel.cpp
ops/transpose_2d_4d/runner/: transpose_2d_4d_runner.cpp  transpose_2d_4d_runner.hpp
scripts/: benchmark_op.sh  build_host.sh  build_npu.sh  detect_ascend_env.py  export_cannbench.py  generate_op_from_spec.py  harness.py  new_op.py  test_host.sh  test_npu.sh
specs/: 01_elementwise_add.yaml  02_axpy_scalar_affine.yaml  03_broadcast_binary.yaml  04_activation_gelu_silu.yaml  05_reduce_sum_lastdim.yaml  06_transpose_2d_4d.yaml  07_layer_norm.yaml  08_matmul_bias.yaml  09_rms_norm_rope_fused.yaml  10_flash_attention_fwd_fused.yaml
src/: accuracy.cpp  ascend_runtime.cpp  dtype.cpp  shape.cpp  test_utils.cpp
tests/: CMakeLists.txt  test_activation_gelu_silu.cpp  test_axpy_scalar_affine.cpp  test_broadcast_binary.cpp  test_elementwise_add.cpp  test_flash_attention_fwd_fused.cpp  test_harness_core.cpp  test_layer_norm.cpp  test_matmul_bias.cpp  test_reduce_sum_lastdim.cpp  test_rms_norm_rope_fused.cpp  test_transpose_2d_4d.cpp
(+28 files in other folders)
